# wi4mpi

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  GOVERNANCE.md  LICENSE-BSD  README  README.md  assemble_sym.sh  doc_dev  doc_dev.fr  doc_users.en  doc_users.fr  rename_sym.sh
Testing/: CMakeLists.txt
Testing/compile/: CMakeLists.txt  mpi_init.f  run_mpic++_tests.sh  run_mpicc_tests.sh  run_mpicxx_tests.sh  run_mpif77_tests.sh  run_mpif90_tests.sh  run_mpifort_tests.sh
Testing/etc/: batch.cfg.in  mpivars.sh.in
Testing/mpi_init/: CMakeLists.txt  mpi_init.cpp  run_mpi_init_from_mpic++_tests.sh  run_mpi_init_from_mpicc_tests.sh  run_mpi_init_from_mpicxx_tests.sh  run_mpi_init_from_mpif77_tests.sh  run_mpi_init_from_mpif90_tests.sh  run_mpi_init_from_mpifort_tests.sh
Testing/mpi_max/: CMakeLists.txt  fileview.c  fileview.f90  info.c  info.f90  main.c  main.f90  port-client.c  port-client.f90  port-server.c  port-server.f90  run_mpi_max_f_tests.sh  run_mpi_max_port_f_tests.sh  run_mpi_max_port_tests.sh  run_mpi_max_tests.sh
Testing/mpiio/: CMakeLists.txt  mpi_file_open.c  run_mpi_file_open_tests.sh
Testing/mpirun/: CMakeLists.txt  run_mpirun_tests.sh
Testing/timeout/: CMakeLists.txt  run_timeout_tests.sh  timeout_slow_add.c
Testing/timeout_thread/: CMakeLists.txt  run_timeout_omp_tests.sh  timeout_omp_slow_add.cpp
demo/aarch64/src/: CMakeLists.txt
demo/aarch64/src/common/: engine.c  func_char_fort.c  mappers.h  optimisation.h  thread_safety.h  uthash.h  utils.h  wi4mpi_debugger.c
demo/aarch64/src/interface/manual/: manual_interface.h  mpi.h  script_mpih
demo/aarch64/src/interface/module/: mpi.f90  mpi_base.f90  mpi_constants.f90  mpi_sizeof.f90
dev/: README.md  (+6 more)
src/: CMakeLists.txt  Makefile  c2f_f2c.c  lib_empty.c  manual_wrapper.h  mappers.h  new_utils.c  new_utils.h  new_utils_fn.c  prepare_4_static.sh  static_lib_generate  test_generation_wrapper.c  wrapper.c
src/INTEL_OMPI/: wrapper_f.h
src/OMPI_INTEL/: wrapper_f.h
src/OMPI_OMPI/: wrapper_f.h
src/app/: run_mpio.h
src/app/INTEL_INTEL/: run_mpi.h
src/app/OMPI_OMPI/: mpi_bullx.h
src/common/: .manual_wrapper.h.swp  asm_jit.c  debug_printer.c  engine.c  engine.h  engine_fn.c  engine_fn.h  fort_common.h  func_char_fort.c  func_char_fort.h  helper.c  helper.h  lib_empty.c  manual_wrapper.h  mappers.h  new_utils.c  new_utils.h  new_utils_fn.c  new_utils_fn.h  new_utils_fn_fort.c  new_utils_vcd.c  optimisation.h  override.c  override.h  thread_safety.h  utils.h  wi4mpi_debugger.c
src/common/mpich/4.2.0/: mpi.h
src/etc/: wi4mpi.cfg
src/generator/: README.md  cinterfacegenerator.py  codegenerator.py.orig  cpreloadgenerator.py  developers_notes.md  fortraninterfacegenerator.py  fortranpreloadgenerator.py  generator.py  header.py  intelheader.py  intelompiheader.py  interface_fort.c  mpcheader.py  mpichheader.py  mpichintelheader.py  mpichmpichheader.py  mpichompiheader.py  ompiheader.py  ompiintelheader.py  ompimpichheader.py  textoperator.py  validate_json.py
src/generator/etc/headers/: header._common_generate_app_mpih.bloc_01.replace  header._common_generate_app_mpih.bloc_06.pattern  header._common_generate_app_mpih.bloc_08.pattern  header._common_generate_app_mpih.bloc_08a.pattern  ompiintelheader._app_to_run.replace
src/generator/tests/: test_textoperator.py
src/interface/: makefile_interface
src/interface/header/OMPI_INTEL/: app_mpi.h  run_mpi.h  run_mpi_1.h  wrapper_f.h
src/interface/header/OMPI_OMPI/: app_mpi.h  run_mpi.h  run_mpi_1.h  run_mpi_2.h  test.c  test_2.c  wrapper_f.h
src/interface/header/_INTEL/: app_mpi.h  run_mpi.h  run_mpio.h  wrapper_f.h
src/interface/header/_MPC/: app_mpi.h  run_mpi.h  run_mpio.h  wrapper_f.h
src/interface/header/_MPICH/: app_mpi.h  run_mpi.h  wrapper_f.h
src/interface/header/_OMPI/: app_mpi.h  run_mpi.h  wrapper_f.h
src/interface/header/scripts/: MPC_app_mpi.sed  MPC_run_mpi.sed  MPI_to_RMPI.sed  gen_mpc.sh  ompi_intel  ompi_ompi
src/interface/interface_utils/include/: mpi.h  mpi_constants.f90  mpi_sizeof.f90  mpif.h
src/interface/lib_cccmpi/include/: mpi.h  mpif-config.h
src/interface/manual/: dlsym_global.c  manual_interface.h
src/interface/module/: mpi_base.f90  mpi_constants.f90  test_bk.f90
src/lib_static/common/: mappers.h  new_utils.c  new_utils_fn_fort.c  new_utils_vcd.c  utils.h  wi4mpi_debugger.c
src/preload/: makefile_preload
src/preload/etc/: wi4mpi.cfg  wi4mpi.cfg.in
src/preload/header/INTEL_INTEL/: app_mpi.h  app_mpi_1.h  app_mpio.h  run_mpi.h  run_mpio.h  wrapper_f.h
src/preload/header/INTEL_MPICH/: app_mpi.h  app_mpio.h  run_mpi.h  run_mpio.h  wrapper_f.h
src/preload/header/INTEL_OMPI/: app_mpi.h  app_mpi_2.h  run_mpi.h  run_mpi.h.bk  run_mpi_1.h  wrapper_f.h
src/preload/header/MPICH_INTEL/: app_mpi.h  app_mpio.h  run_mpio.h  wrapper_f.h
src/preload/header/MPICH_MPICH/: app_mpi.h  run_mpi.h  run_mpio.h  wrapper_f.h
src/preload/header/MPICH_OMPI/: app_mpi.h  app_mpio.h  run_mpi.h  wrapper_f.h
src/preload/header/OMPI_INTEL/: app_mpi.h  app_mpi_1.h  app_mpi_2_bk.h  intel_mpi.h  run_mpi.h  run_mpi_2.h  run_mpio.h  wrapper_f.h
src/preload/header/OMPI_MPICH/: app_mpi.h  run_mpi.h  run_mpio.h  wrapper_f.h
src/preload/header/OMPI_OMPI/: app_mpi.h  app_mpi_1.h  app_mpi_2.h  ompi_mpi.h  run_mpi.h  run_mpi_1.h  run_mpi_2.h  wrapper_f.h
src/preload/header/scripts/: intel_ompi  ompi_intel  ompi_ompi
src/resources/MPI_headers/mpc/: mpcmp.h  mpio.h  sctk_types.h
src/resources/MPI_headers/wrapperf/: interface_mpc.h  mpich_mpich.h  mpich_openmpi.h  openmpi_mpich.h
src/resources/etc/: wi4mpi.cfg.in
src/resources/generator_data/headers/: header._common_generate_app_mpih.bloc_02.pattern  header._common_generate_app_mpih.bloc_03.delete  header._common_generate_app_mpih.bloc_06.replace  header._common_generate_app_mpih.bloc_08.replace  header._common_generate_app_mpih.bloc_10.delete  intelompiheader.ompi_replace_mpi_with_rmpi.replace  ompiheader._replace_mpi_with_rmpi.ompiompi.replace  ompiheader._replace_mpi_with_rmpi.replace  ompiintelheader._run_to_app.bloc_r0.replace
(+491 files in other folders)
